--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon ./chat/server.js",
+    "start": "node server.js"
   },
   "keywords": [],
-  "dev": "nodemon server.js",
-  "start": "node server.js",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.1"
